# homelab

./: .gitignore  upgrade_package.yml
ansible_playbooks/: apt_upgrade.yml  jellyfin_cert_check.yml  pihole_up.yml  pikvm_update.yml
minecraft/: build.sh  dockerfile
portainer/: .gitignore  Cargo.toml  build.rs  run.cmd  run.sh
portainer/.cargo/: config.toml
portainer/docker/: README.md  build.sh  create-manifest.sh  dockerfile  entrypoint.sh
portainer/src/: influxdb_writer.rs  main.rs  models.rs
rust/: Cargo.toml
rust/doh-proxy/: Cargo.toml  QUICKSTART.md  README.md  build.rs
rust/doh-proxy/docker/: .dockerignore  README.md  build.sh  create-manifest.sh  dockerfile  entrypoint.sh
rust/doh-proxy/src/: config.rs  dns_handler.rs  doh_client.rs  main.rs
rust/portainer/: Cargo.toml  build.rs  run.sh
rust/portainer/docker/: build.sh  create-manifest.sh  entrypoint.sh
rust/portainer/src/: influxdb_writer.rs  main.rs  models.rs
