[package]
name = "ptn2influx"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = "~1.0.98"
chrono = "~0.4.40"
crossbeam = "~0.8.4"
influxdb2 = { version = "~0.5.2", features = ["native-tls"], default-features = false}
futures-util = "~0.3.31"
log = { version = "~0.4.26", features = ["max_level_trace", "release_max_level_debug"]}
log4rs = { version = "~1.3.0", features = ["rolling_file_appender"] }
msvc_spectre_libs = { version = "~0.1.3", features = ["error"] }   # On Windows, makes the project to link with the Spectre-mitigated CRT and libs.
reqwest = { version = "~0.12.15", features = ["json", "blocking", "native-tls"], default-features = false }
serde = { version = "~1.0.219", features = ["derive"] }
serde_json = "~1.0.140"
tokio = { version = "~1.44.2", features = ["full"] }

[build-dependencies]
winres = "~0.1.12"

[package.metadata.winres]
ProductName = "Portainer Metrics to InfluxDB"
ProductVersion = "0.1.2"
FileDescription = "Polls Portainer metrics and sends to InfluxDB"
CompanyName = "Whiskey Hotel"
OriginalFilename = "ptn2influx.exe"
LegalCopyright = "© 2025 Whiskey Hotel"
