[package]
name = "doh-proxy"
version = "0.1.3"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
hickory-server = "0.25"
hickory-proto = "0.25"
reqwest = { version = "0.13", features = [
    "native-tls",
], default-features = false }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
moka = { version = "0.12", features = ["future"] }

[target.'cfg(windows)'.dependencies]
msvc_spectre_libs = { version = "0.1", features = [
    "error",
] } # On Windows, makes the project to link with the Spectre-mitigated CRT and libs.

[dev-dependencies]
wiremock = "0.6"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
ProductName = "DoH Proxy"
FileDescription = "DNS over HTTPS Proxy, a replacement for cloudflared proxy-dns command"
CompanyName = "Jay Wang"
OriginalFilename = "doh-proxy.exe"
LegalCopyright = "MIT License"
