[package]
name = "ptn2influx"
version = "0.1.4"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
crossbeam = "0.8"
influxdb2 = { version = "0.5", features = [
    "native-tls",
], default-features = false }
futures-util = "0.3"
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
log4rs = { version = "1.3", features = ["rolling_file_appender"] }
msvc_spectre_libs = { version = "0.1", features = [
    "error",
] } # On Windows, makes the project to link with the Spectre-mitigated CRT and libs.
reqwest = { version = "0.12", features = [
    "json",
    "blocking",
    "native-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
ProductName = "Portainer Metrics to InfluxDB"
ProductVersion = "0.1.4"
FileDescription = "Polls Portainer metrics and sends to InfluxDB"
CompanyName = "Jay Wang"
OriginalFilename = "ptn2influx.exe"
LegalCopyright = "MIT"
